# exif-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_config.py
app/api/: __init__.py  dependencies.py  routes.py
app/core/: __init__.py  exceptions.py  metrics.py  security.py
app/schemas/: exif.py
app/services/: exif_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_config.py  test_exif_api.py  test_exif_service.py
